--- a/src/css/global.less
+++ b/src/css/global.less
@@ -6,11 +6,18 @@
   width: 100%;
   height: 425px;
   background: url(/img/hero.png);
+  position: relative;
+  > * {
+    height: 100%;
+  }
 }
 
 .container {
   width: 1500px;
   margin: 0 auto;
+  &.small {
+    width: 575px;
+  }
 }
 
 * {
@@ -25,4 +32,28 @@ body {
 
 a {
   color: #bec3cc;
+}
+
+.ghost-placeholder {
+  color: rgba(255, 255, 255, .5);
+  padding-left: 4px;
+}
+
+.ghost-input {
+  background: transparent;
+  border: none;
+  border-left: 1px solid white;
+  color: rgba(255, 255, 255, .5);
+  font-size: 30px;
+
+  &::-webkit-input-placeholder { .ghost-placeholder; }
+  &:-moz-placeholder { .ghost-placeholder; } /* Firefox 18- */
+  &::-moz-placeholder { .ghost-placeholder; } /* Firefox 19+ */
+  &:-ms-input-placeholder { .ghost-placeholder; }
+
+  &:focus {
+    outline: none;
+    padding-left: 1px;
+    border-left: none;
+  }
 }
