--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -2,3 +2,6 @@
 @import (less) 'profile-picture.less';
 @import (less) 'global.less';
 @import (less) 'header.less';
+@import (less) 'sub-menu.less';
+@import (less) 'on-your-mind.less';
+@import (less) 'icons.less';
