Slightly more consitent with prototype.

--- a/src/css/on-your-mind.less
+++ b/src/css/on-your-mind.less
@@ -8,13 +8,16 @@
   width: 100%;
   padding: 40px;
   border-radius: 3px;
-  background-color: rgb(0, 178, 134);
-  opacity: 0.702;
+  background-color: rgba(0, 178, 134, .7);
   color: rgba(255, 255, 255, .5);
 
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+
+  input {
+    margin-bottom: 31px;
+  }
 
   .add-photo {
     margin-right: 44px;
