--- a/src/css/sub-menu.less
+++ b/src/css/sub-menu.less
@@ -1,3 +1,4 @@
+@import (reference) 'variables.less';
 
 .sub-menu {
   color: #bec3cc;
@@ -15,7 +16,7 @@
 
     &.active {
       color: white;
-      border-bottom: 4px solid green;
+      border-bottom: 4px solid @brand-color;
       padding-bottom: 6px;
     }
   }
