--- a/src/css/global.less
+++ b/src/css/global.less
@@ -22,11 +22,12 @@
 
 * {
   box-sizing: border-box;
+  font-family: @page-font;
 }
 
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
   color: #70767f;
 }
 
