More fine tuning.

--- a/src/css/post.less
+++ b/src/css/post.less
@@ -14,8 +14,9 @@
 
   .author {
     color: #3f454d;
-    margin-bottom: 11px;
+    margin-bottom: 5px;
     display: inline-block;
+    font-size: 16px;
   }
 
   .profile-picture {
@@ -26,6 +27,9 @@
     float: left;
     width: 400px;
     margin-left: 18px;
+    .content {
+      line-height: 23px;
+    }
   }
 
   width: 100%;
