--- a/src/css/sub-menu.less
+++ b/src/css/sub-menu.less
@@ -3,7 +3,7 @@
 .sub-menu {
   color: #bec3cc;
   font-weight: bold;
-  position:absolute;
+  position: absolute;
   bottom: 0;
   width: 100%;
 
@@ -13,6 +13,7 @@
     padding: 10px;
     font-size: 15px;
     text-transform: uppercase;
+    cursor: pointer;
 
     &.active {
       color: white;
