--- a/src/css/global.less
+++ b/src/css/global.less
@@ -15,6 +15,7 @@
 .container {
   width: 1500px;
   margin: 0 auto;
+  position: relative;
   &.small {
     width: 575px;
   }
@@ -43,7 +44,6 @@ a {
 .ghost-input {
   background: transparent;
   border: none;
-  border-left: 1px solid white;
   color: rgba(255, 255, 255, .5);
   font-size: 30px;
 
@@ -54,7 +54,7 @@ a {
 
   &:focus {
     outline: none;
-    padding-left: 1px;
+    padding-left: 0px;
     border-left: none;
   }
 }
