Add the babel loader for es6 javascript.

--- a/src/css/post.less
+++ b/src/css/post.less
@@ -32,6 +32,17 @@
     }
   }
 
+.media-container {
+  max-height: 300px;
+  overflow: hidden;
+  width:100%;
+  >img {
+    width:100%;
+    cursor: pointer;
+  }
+}
+
+
   width: 100%;
   max-width: 575px;
   border: 1px solid rgb(222, 225, 229);
