slight refactor to enable blurry background with modals. should work in ie9, ff, chrome

--- a/src/css/global.less
+++ b/src/css/global.less
@@ -24,11 +24,18 @@
 * {
   box-sizing: border-box;
   font-family: @page-font;
+  font-size: 14px;
+}
+
+.blur {
+  filter: blur(6px);
+  -webkit-filter: blur(6px);
+  -moz-filter: blur(6px);
+  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='6');
 }
 
 body {
   margin: 0;
-  font-size: 14px;
   color: #70767f;
 }
 
