--- a/src/css/header.less
+++ b/src/css/header.less
@@ -1,7 +1,13 @@
 .header {
   padding: 15px 100px;
   background-color: #262728;
-  width: 100%;
   min-height: 10px;
   vertical-align: middle;
+
+  .header-contents {
+    float: right;
+    .new-message {
+      cursor: pointer;
+    }
+  }
 }
