--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -5,3 +5,5 @@
 @import (less) 'sub-menu.less';
 @import (less) 'on-your-mind.less';
 @import (less) 'icons.less';
+@import (less) 'modal.less';
+@import (less) 'buttons.less';
