More modal styling.

--- a/src/css/modal.less
+++ b/src/css/modal.less
@@ -4,9 +4,12 @@
   background: rgba(0,0,0,.9);
   z-index: 10000;
   padding-top: 180px;
+  text-align: center;
 
   > * {
     margin: 0 auto;
     max-width: 80%;
+    display: inline-block;
+    text-align: initial;
   }
 }
