Small style tweaks + add photo on new message modal.

--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -17,3 +17,11 @@
 .video-icon-light {
   background: url(/img/video-light.png)
 }
+
+.photo-icon-dark {
+  background: url(/img/photo-dark.png)
+}
+
+.video-icon-dark {
+  background: url(/img/video-dark.png)
+}
