--- a/src/css/sub-menu.less
+++ b/src/css/sub-menu.less
@@ -11,9 +11,10 @@
     display: inline-block;
     margin-right: 30px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 12px;
     text-transform: uppercase;
     cursor: pointer;
+    font-weight: bold;
 
     &.active {
       color: white;
