--- a/src/css/on-your-mind.less
+++ b/src/css/on-your-mind.less
@@ -1,12 +1,9 @@
 @import (reference) 'variables.less';
 
-.button(){
-  cursor: pointer;
-}
-
 .on-your-mind {
   width: 100%;
-  padding: 40px;
+  padding: 25px;
+  padding-top: 40px;
   border-radius: 3px;
   background-color: rgba(0, 178, 134, .7);
   color: rgba(255, 255, 255, .5);
@@ -16,6 +13,7 @@
   transform: translateY(-50%);
 
   input {
+    font-weight: 300;
     margin-bottom: 31px;
   }
 
