Add hover color to buttons.

--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -11,7 +11,11 @@ button {
     outline: none;
   }
 
+  &:hover {
+    background-color: #21cf99;
+  }
+
   &:active {
-    background-color: darken(@slightly-darker-brand, 10%);
+    background-color: @slightly-darker-brand;
   }
 }
