Add post-detail modal, add close button to modals.

--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -11,17 +11,24 @@
 }
 
 .photo-icon-light {
-  background: url(/img/photo-light.png)
+  background: url(/img/photo-light.png);
 }
 
 .video-icon-light {
-  background: url(/img/video-light.png)
+  background: url(/img/video-light.png);
 }
 
 .photo-icon-dark {
-  background: url(/img/photo-dark.png)
+  background: url(/img/photo-dark.png);
 }
 
 .video-icon-dark {
-  background: url(/img/video-dark.png)
+  background: url(/img/video-dark.png);
+}
+
+.close-icon {
+  .icon();
+  width: 21px;
+  height: 21px;
+  background: url(/img/close.png);
 }
