--- a/src/css/modal.less
+++ b/src/css/modal.less
@@ -1,15 +1,33 @@
-.modal-backdrop {
-  position: fixed;
+.modal-node {
+  position: absolute;
   top: 0; bottom: 0; right: 0; left: 0;
-  background: rgba(0,0,0,.9);
-  z-index: 10000;
-  padding-top: 180px;
-  text-align: center;
-
-  > * {
-    margin: 0 auto;
-    max-width: 80%;
-    display: inline-block;
-    text-align: initial;
+  display: none;
+  &.open {
+    display: block;
   }
+
+  .modal-backdrop {
+    height: 100%;
+    background: rgba(0,0,0,.9);
+    z-index: 10000;
+    padding-top: 180px;
+    text-align: center;
+
+    > * {
+      margin: 0 auto;
+      max-width: 80%;
+      display: inline-block;
+      text-align: initial;
+    }
+    .modal-contents {
+      position: relative;
+      .close-icon {
+        position: absolute;
+        top: -20px;
+        right: -25px;
+        cursor: pointer;
+      }
+    }
+  }
+
 }
