Start adding a fancy-input component for the settings view.

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -8,3 +8,4 @@
 @import (less) 'modal.less';
 @import (less) 'buttons.less';
 @import (less) 'new-message.less';
+@import (less) 'fancy-input.less';
