--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -2,7 +2,7 @@
 
 button {
   border-radius: 3px;
-  background-color: @slightly-darker-brand;
+  background-color: @normal-input-color;
   background-color: rgb(0, 178, 134);
   padding: 8px 22px;
   color: white;
@@ -16,6 +16,6 @@ button {
   }
 
   &:active {
-    background-color: @slightly-darker-brand;
+    background-color: @normal-input-color;
   }
 }
