--- a/src/css/modal.less
+++ b/src/css/modal.less
@@ -8,6 +8,7 @@
 
   .modal-backdrop {
     height: 100%;
+    min-height: 2000px;
     background: rgba(0,0,0,.9);
     z-index: 10000;
     padding-top: 180px;
