--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -9,3 +9,4 @@
 @import (less) 'buttons.less';
 @import (less) 'new-message.less';
 @import (less) 'fancy-input.less';
+@import (less) 'toggle-switch.less';
