--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -4,7 +4,8 @@
 
 // Colors
 @brand-color: #00cc99;
-@slightly-darker-brand: #00b286;
+@normal-input-color: #00b286;
+@inactive-input-color: #cfcfcf;
 
 
 // mixins
