Tweak fancy input's style.

--- a/src/css/fancy-input.less
+++ b/src/css/fancy-input.less
@@ -1,9 +1,8 @@
 .fancy-input {
-  margin: 50px; //TODO- remove this;
   border: 1px solid #dee1e5;
   background-color: white;
   border-radius: 4px;
-  padding: 14px;
+  padding: 7px;
   color: #d6d7dc;
 
   &.focus {
@@ -12,6 +11,7 @@
 
   .left-content {
     float: left;
+    margin-right: 10px;
   }
   .right-content {
     float: right;
@@ -20,7 +20,6 @@
   .middle-content {
     overflow: hidden;
     input {
-      margin-left: 10px;
       width: 100%;
       border: none;
       height: 100%;
