More settings view work.

--- a/src/css/fancy-input.less
+++ b/src/css/fancy-input.less
@@ -1,15 +1,17 @@
 .fancy-input {
-  border: 1px solid #dee1e5;
+  border: 1px solid #bec3cc;
   background-color: white;
   border-radius: 4px;
   padding: 7px;
   color: #d6d7dc;
+  margin-bottom: 20px;
 
   &.focus {
     border-color: #31b9ff;
   }
 
   .left-content {
+    padding-top: 1px;
     float: left;
     margin-right: 10px;
   }
