--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -32,3 +32,20 @@
   height: 21px;
   background: url(/img/close.png);
 }
+
+.lock-icon {
+  background: url(/img/lock-icon.png);
+  width: 16px;
+  height: 17px;
+}
+.person-icon {
+  background: url(/img/user-icon.png);
+  width: 16px;
+  height: 16px;
+}
+
+.mail-icon {
+  background: url(/img/mail-icon.png);
+  width: 16px;
+  height: 13px;
+}
