--- a/src/css/new-message.less
+++ b/src/css/new-message.less
@@ -2,7 +2,7 @@
 
 .new-message-container {
   border-radius: 3px;
-  background-color: #dee1e5;
+  background-color: @background-differentiator;
   width: 575px;
   padding: 17px 26px;
 
