--- a/src/css/post.less
+++ b/src/css/post.less
@@ -1,3 +1,5 @@
+@import (reference) 'variables.less';
+
 .post-primary-content {
   padding: 25px;
   &:after {
@@ -63,7 +65,7 @@
   padding: 16px 25px;
 
   input {
-    border: 1px solid #dee1e5;
+    border: 1px solid @background-differentiator;
     background-color: white;
     width: 100%;
     border-radius: 4px;
