--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -10,3 +10,4 @@
 @import (less) 'new-message.less';
 @import (less) 'fancy-input.less';
 @import (less) 'toggle-switch.less';
+@import (less) 'radio-switches';
