--- a/src/css/global.less
+++ b/src/css/global.less
@@ -1,3 +1,5 @@
+@import (reference) 'variables.less';
+
 .column {
   display: inline-block;
 }
@@ -10,6 +12,24 @@
   > * {
     height: 100%;
   }
+}
+
+section {
+  border-bottom: 1px solid @background-differentiator;
+  padding-bottom: 45px;
+  margin-bottom: 45px;
+  padding-right: 75px;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+h3 {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
 }
 
 .container {
