Tiny style tweaks.

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -10,4 +10,5 @@
 @import (less) 'new-message.less';
 @import (less) 'fancy-input.less';
 @import (less) 'toggle-switch.less';
-@import (less) 'radio-switches';
+@import (less) 'radio-switches.less';
+@import (less) 'settings.less';
