--- a/src/css/fancy-input.less
+++ b/src/css/fancy-input.less
@@ -1,5 +1,5 @@
 .fancy-input {
-  border: 1px solid #bec3cc;
+  border: 1px solid @normal-input-border-color;
   background-color: white;
   border-radius: 4px;
   padding: 7px;
