--- a/src/css/global.less
+++ b/src/css/global.less
@@ -14,16 +14,17 @@
   }
 }
 
-section {
-  border-bottom: 1px solid @background-differentiator;
-  padding-bottom: 45px;
-  margin-bottom: 45px;
-  padding-right: 75px;
-}
-
 h1 {
   font-size: 30px;
   font-weight: 600;
+}
+
+.clearfix {
+  &:after {
+    clear:both;
+    display: block;
+    content: ' ';
+  }
 }
 
 h3 {
@@ -61,7 +62,7 @@ body {
 }
 
 a {
-  color: #bec3cc;
+  color: @normal-input-border-color;
 }
 
 .ghost-placeholder {
