--- a/src/css/sub-menu.less
+++ b/src/css/sub-menu.less
@@ -1,7 +1,7 @@
 @import (reference) 'variables.less';
 
 .sub-menu {
-  color: #bec3cc;
+  color: @normal-input-border-color;
   font-weight: bold;
   position: absolute;
   bottom: 0;
