--- a/src/css/global.less
+++ b/src/css/global.less
@@ -27,6 +27,14 @@ h1 {
   }
 }
 
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
+}
+
 h3 {
   text-transform: uppercase;
   font-weight: 600;
