--- a/src/css/settings.less
+++ b/src/css/settings.less
@@ -3,8 +3,18 @@ section {
   padding-bottom: 45px;
   margin-bottom: 45px;
 
-  .profile-picture {
-    float: left;
+  .profile-picture-container {
+    float:left;
+
+    .profile-picture {
+      float: left;
+      margin-bottom: 10px;
+    }
+
+    button.change-picture {
+      clear: both;
+      display: block;
+    }
   }
 
   .account-settings {
