Add search to the header.

--- a/src/css/fancy-input.less
+++ b/src/css/fancy-input.less
@@ -1,6 +1,7 @@
 .fancy-input {
   border: 1px solid @normal-input-border-color;
   background-color: white;
+
   border-radius: 4px;
   padding: 7px;
   color: #d6d7dc;
@@ -16,12 +17,15 @@
     margin-right: 10px;
   }
   .right-content {
+    margin-left: 7px;
     float: right;
   }
 
   .middle-content {
     overflow: hidden;
     input {
+      color: inherit;
+      background-color: inherit;
       width: 100%;
       border: none;
       height: 100%;
