--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -49,3 +49,10 @@
   width: 16px;
   height: 13px;
 }
+
+.search-icon {
+  .icon();
+  background: url(/img/search-icon.png);
+  width: 18px;
+  height: 18px;
+}
