--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -12,3 +12,4 @@
 @import (less) 'toggle-switch.less';
 @import (less) 'radio-switches.less';
 @import (less) 'settings.less';
+@import (less) 'profile-menu.less';
