--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -6,7 +6,7 @@
 @brand-color: #00cc99;
 @normal-input-color: #00b286;
 @inactive-input-color: #cfcfcf;
-
+@body-font-color: #70767f;
 @background-differentiator: #dee1e5;
 
 @normal-input-border-color: #bec3cc;
