--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -29,7 +29,7 @@ button {
   }
 
   &:hover {
-    background-color: #21cf99;
+    background-color: @normal-input-color-hover;
   }
 
   &:active {
