--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -13,3 +13,4 @@
 @import (less) 'radio-switches.less';
 @import (less) 'settings.less';
 @import (less) 'profile-menu.less';
+@import (less) 'footer.less';
