--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -5,6 +5,7 @@
 // Colors
 @brand-color: #00cc99;
 @normal-input-color: #00b286;
+@normal-input-color-hover: #21cf99;
 @inactive-input-color: #cfcfcf;
 @body-font-color: #70767f;
 @background-differentiator: #dee1e5;
