Fix text color in the fancy inputs on the settings page.

--- a/src/css/fancy-input.less
+++ b/src/css/fancy-input.less
@@ -24,7 +24,7 @@
   .middle-content {
     overflow: hidden;
     input {
-      color: inherit;
+      color: @body-font-color;
       background-color: inherit;
       width: 100%;
       border: none;
