--- a/src/css/header.less
+++ b/src/css/header.less
@@ -32,6 +32,9 @@
       &:not(.focus) {
         border-color: #44474b;
       }
+      input {
+        color: white;
+      }
       height: 30px;
       padding: 5px;
       width: 200px;
