--- a/src/css/global.less
+++ b/src/css/global.less
@@ -48,10 +48,12 @@ h3 {
 
 .container {
   width: 1500px;
+  max-width: 100%;
   margin: 0 auto;
   position: relative;
   &.small {
     width: 575px;
+    max-width: 90%;
   }
 }
 
