--- a/src/css/header.less
+++ b/src/css/header.less
@@ -44,3 +44,15 @@
     }
   }
 }
+
+@media screen and (max-width: 700px) {
+    .header .fancy-input {
+      display: none;
+    }
+}
+
+@media screen and (max-width: 500px) {
+  .header {
+    padding: 15px 30px;
+  }
+}
