--- a/src/css/post.less
+++ b/src/css/post.less
@@ -18,9 +18,8 @@
     float:left;
   }
   .content-body {
-    float: left;
-    width: 400px;
-    margin-left: 18px;
+    overflow: hidden;
+    padding-left: 18px;
     .content {
       line-height: 23px;
     }
@@ -57,6 +56,9 @@
   background-color: white;
   border-radius: 4px;
   overflow: hidden;
+  > img {
+    width: 100%;
+  }
 }
 
 .reply {
