Clean up some duplication of less.

--- a/src/css/global.less
+++ b/src/css/global.less
@@ -25,11 +25,7 @@ h2 {
 }
 
 .clearfix {
-  &:after {
-    clear:both;
-    display: block;
-    content: ' ';
-  }
+  .clearafter();
 }
 
 .pull-left {
