--- a/src/css/post.less
+++ b/src/css/post.less
@@ -1,12 +1,9 @@
 @import (reference) 'variables.less';
 
 .post-primary-content {
+  .clearafter();
   padding: 25px;
-  &:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
+
   .author {
     color: #3f454d;
     margin-bottom: 5px;
