--- a/src/css/header.less
+++ b/src/css/header.less
@@ -1,13 +1,5 @@
 @import (reference) 'variables.less';
 
-.fixafter() {
-  &:after {
-    content: ' ';
-    display:block;
-    clear: both;
-  }
-}
-
 .header {
   padding: 15px 100px;
   background-color: #262728;
@@ -16,7 +8,7 @@
 
   .header-contents {
     float: right;
-    .fixafter();
+    .clearafter();
     > * {
       display: inline-block;
       margin-left: 25px;
