More responsive work.

--- a/src/css/global.less
+++ b/src/css/global.less
@@ -51,6 +51,16 @@ h3 {
     width: 575px;
     max-width: 90%;
   }
+  &.medium {
+    width: 1175px;
+    max-width: 90%;
+  }
+  @media screen and (max-width: 900px) {
+    &.medium {
+      width: 575px;
+      max-width: 90%;
+    }
+  }
 }
 
 * {
