--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -56,3 +56,17 @@
   width: 18px;
   height: 18px;
 }
+
+.list-icon {
+  background: url(/img/list-inactive.png);
+  &.active {
+    background: url(/img/list-active.png);
+  }
+}
+
+.tile-icon {
+  background: url(/img/tile-inactive.png);
+  &.active {
+    background: url(/img/tile-active.png);
+  }
+}
