Add post icons.

--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -14,6 +14,14 @@
   background: url(/img/photo-light.png);
 }
 
+.reply-icon {
+  background: url(/img/reply-icon.png);
+}
+
+.heart-icon {
+  background: url(/img/heart-icon.png);
+}
+
 .video-icon-light {
   background: url(/img/video-light.png);
 }
