--- a/src/css/post.less
+++ b/src/css/post.less
@@ -10,6 +10,16 @@
     display: inline-block;
     font-size: 16px;
   }
+  .post-icons {
+    float:right;
+    color: @normal-input-border-color;
+    .icon {
+      cursor: pointer;
+    }
+    > * {
+      margin-left: 16px;
+    }
+  }
 
   .profile-picture {
     float:left;
