Add normalized css for better cross browser support.

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -1,3 +1,4 @@
+@import (less) 'normalize.less';
 @import (less) 'post.less';
 @import (less) 'profile-picture.less';
 @import (less) 'global.less';
