--- a/src/css/header.less
+++ b/src/css/header.less
@@ -26,6 +26,7 @@
       }
       input {
         color: white;
+        background-color: rgba(0,0,0,0);
       }
       height: 30px;
       padding: 5px;
