Better styling support for ie9.

--- a/src/css/profile-menu.less
+++ b/src/css/profile-menu.less
@@ -19,6 +19,7 @@
     position:absolute;
     top: 50%;
     transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
   }
 
   &.open {
@@ -54,6 +55,7 @@
       position:absolute;
       left: 30px;
       transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
     }
 
     li {
