--- a/src/css/on-your-mind.less
+++ b/src/css/on-your-mind.less
@@ -11,6 +11,7 @@
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
 
   input {
     font-weight: 300;
