--- a/src/css/post.less
+++ b/src/css/post.less
@@ -56,6 +56,7 @@
       margin-left: 10px;
       border-top: 4px solid @normal-input-border-color;
       transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
     }
     > * {
       font-size: 12px;
